tests/syntax-error/nested-induction-conflict.silly
// RUN: cd %S
// RUN: %Not %ExeSilly -g nested-induction-conflict.silly -o %t.exe 2>&1 | %FileCheck %s
// CHECK: nested-induction-conflict.silly:10:5: error: Induction variable i used by enclosing FOR
// CHECK:    10 |     FOR (INT32 i: (0, 2)) {  // redeclaration error
// CHECK:       |     ^


// nested-induction-conflict.silly
FOR (INT32 i: (0, 2)) {
    FOR (INT32 i: (0, 2)) {  // redeclaration error
        PRINT i;
    };
};
